--- a/json/json.html
+++ b/json/json.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src = "./function2.js"></script>
+    <script src="./json.js"></script>
 </head>
 <body>
     
