--- a/json/array.html
+++ b/json/array.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./json1.js"></script>
+    <script src="./array1.js"></script>
 </head>
 <body>
     
